--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -20,6 +20,13 @@
   cursor: default !important;
 }
 
+body {
+  font-family: 'Geologica', sans-serif;
+  color: #0D0D0D;
+  background-color: #fff;
+}
+
+/* cursor */
 a,
 button,
 .btn,
@@ -28,11 +35,6 @@ input[type="submit"] {
   cursor: pointer !important;
 }
 
-body {
-  font-family: 'Geologica', sans-serif;
-  color: #0D0D0D;
-  background-color: #fff;
-}
 
 /* header */
 header {
