--- a/docs/css/home.css
+++ b/docs/css/home.css
@@ -1,10 +1,19 @@
 /* primary hero */
-.hero-primary {
-  height: 100vh;
+body {
+  margin: 0;
+  font-family: 'Geologica', sans-serif;
+  color: #fff;
   background-image: url('../assets/images/background2.webp');
   background-size: cover;
-  background-position: center top;
+  background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  overflow-x: hidden;
+}
+
+.hero-primary {
+  height: 100vh;
+  background: transparent;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -18,8 +27,8 @@
   background: linear-gradient(
     to bottom,
     rgba(7,7,7,0) 0%,
-    rgba(7,7,7,0.3) 70%,
-    rgba(7,7,7,0.8) 80%,
+    rgba(7,7,7,0.3) 85%,
+    rgba(7,7,7,0.8) 95%,
     rgba(7,7,7,1) 100%
   );
 }
