--- a/docs/css/gear.css
+++ b/docs/css/gear.css
@@ -2,7 +2,9 @@ body {
   margin: 0;
   font-family: 'Geologica', sans-serif;
   color: #fff;
-  background-image: url('../assets/images/background.webp');
+  background-image: 
+  linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
+  url('../assets/images/background.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -11,81 +13,166 @@ body {
 }
 
 header {
-    position: relative;
+  position: relative;
 }
 
-/* Сетка Пинтерест */
+/* masonry settings */
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-auto-rows: 10px; /* высота строки для masonry */
-  gap: 16px;
-  padding: 40px;
   min-height: 100vh;
+  margin: 0px 40px;
+}
+.grid-sizer,
+.card {
+  width: 19.5%;
+}
+.gutter-sizer {
+  width: 10px;
 }
 
 /* tips card */
 .card {
-  background: rgba(0,0,0,0.5);
-  backdrop-filter: blur(6px);
-  border-radius: 16px;
-  display: flex;
+  background: rgba(7,7,7,0.7);
+  backdrop-filter: blur(16px);
+  border-radius: 20px;
   flex-direction: column;
   cursor: pointer;
   overflow: hidden;
   color: #fff;
   transition: transform 0.2s, box-shadow 0.2s;
+  margin-bottom: 10px;
 }
 
 .card:hover {
   transform: translateY(-6px) scale(1.02);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.5);
 }
 
-.card img {
+.card-image {
   width: 100%;
-  object-fit: cover;
+  position: relative;
+  overflow: hidden;
+}
+
+.card-image img {
+  border-radius: 20px;
+  width: 100%;
+  height: auto;
   display: block;
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    rgba(0,0,0,1) 70%,
+    rgba(0,0,0,0) 100%
+  );
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(0,0,0,1) 70%,
+    rgba(0,0,0,0) 100%
+  );
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+}
+
+.card-content {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 4px 8px 8px;
 }
 
 .card h3 {
-  font-size: 1.2rem;
-  margin: 12px 16px 4px;
-}
-
-.card p {
-  font-size: 0.9rem;
-  margin: 0 16px 12px;
-  opacity: 0.9;
+  font-size: 1.1rem;
+  margin: 8px 4px 4px;
 }
 
 /* modal */
 .modal {
   position: fixed;
   inset: 0;
-  background: rgba(0,0,0,0.75);
+  background: rgba(7,7,7,0.75);
   display: none;
   justify-content: center;
   align-items: center;
   z-index: 1000;
 }
 
+.modal-image {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.modal-image img {
+  border-radius: 20px;
+  width: 100%;
+  height: auto;
+  display: block;
+  -webkit-mask-image: linear-gradient(
+    to bottom,
+    rgba(0,0,0,1) 70%,
+    rgba(0,0,0,0) 100%
+  );
+  mask-image: linear-gradient(
+    to bottom,
+    rgba(0,0,0,1) 70%,
+    rgba(0,0,0,0) 100%
+  );
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+}
+
 .modal-content {
   background: #0D0D0D;
-  padding: 24px;
-  border-radius: 16px;
+  border-radius: 20px;
   max-width: 600px;
   width: 90%;
   max-height: 80vh;
   overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;   
+}
+.modal-content::-webkit-scrollbar {
+  display: none;               
 }
 
 .modal-close {
   position: absolute;
   top: 16px;
-  right: 24px;
-  cursor: pointer;
+  right: 16px;
   font-size: 24px;
+  font-weight: 600;
+  color: rgb(7,7,7);
+  background: transparent;
+  border: 2px solid rgb(7,7,7);
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  z-index: 10;
+}
+
+.modal-close:hover {
+  background: rgb(7,7,7);
+  color: #ffffff;
+}
+
+.modal-title {
+  margin: 10px;
+  font-size: 28px;
+  font-weight: 600;
+  color: #fff;
+}
+
+.modal-body {
+  margin: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
 }
